<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.View.TextView.Big"
        android:text="@string/station_header"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginTop="@dimen/small" />

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_marginTop="@dimen/small"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small">

        <TableRow android:layout_marginTop="@dimen/tiny">

            <TextView
                style="@style/AppTheme.View.TextView"
                android:text="@string/station_country_label" />

            <TextView
                android:id="@+id/station_country"
                style="@style/AppTheme.View.TextView"
                android:gravity="center_horizontal"
                android:text="@string/station_country_label" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/tiny">

            <TextView
                style="@style/AppTheme.View.TextView"
                android:text="@string/station_city_label" />

            <TextView
                android:id="@+id/station_city"
                style="@style/AppTheme.View.TextView"
                android:gravity="center_horizontal"
                android:text="@string/station_city_label" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/tiny">

            <TextView
                style="@style/AppTheme.View.TextView"
                android:text="@string/station_lat_label" />

            <TextView
                android:id="@+id/station_lat"
                style="@style/AppTheme.View.TextView"
                android:gravity="center_horizontal"
                android:text="@string/station_lat_label" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/tiny">

            <TextView
                style="@style/AppTheme.View.TextView"
                android:text="@string/station_lon_label" />

            <TextView
                android:id="@+id/station_lon"
                style="@style/AppTheme.View.TextView"
                android:gravity="center_horizontal"
                android:text="@string/station_lon_label" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.View.TextView"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small"
        android:text="@string/station_desc"
        android:layout_marginTop="@dimen/small" />


</LinearLayout>