<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/white">

    <de.fluchtwege.weatherhistory.ui.StretchedNetworkImageView
        android:id="@+id/webcam_image"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/green"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/small"
        android:layout_margin="@dimen/small" />

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="false"
        android:layout_above="@id/webcam_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.View.TextView.Big"
                android:text="@string/current_header"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginTop="@dimen/small"
                android:textStyle="bold" />

            <TableLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                android:layout_marginTop="@dimen/small"
                android:paddingLeft="@dimen/small"
                android:layout_marginRight="@dimen/small">

                <TableRow>

                    <LinearLayout android:orientation="vertical">

                        <TextView
                            android:id="@+id/temp_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/AppTheme.View.TextView.Big"
                            android:text="@string/current_temp_label" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="24°C"
                            android:id="@+id/current_temp"
                            android:textSize="40dp"
                            android:textColor="@color/green" />
                    </LinearLayout>

                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/current_image"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:gravity="center_horizontal"
                        android:layout_marginRight="@dimen/small"
                        android:layout_alignParentRight="true" />

                </TableRow>

                <TableRow android:layout_marginTop="@dimen/tiny">

                    <TextView
                        style="@style/AppTheme.View.TextView"
                        android:text="@string/current_feelslike_label" />

                    <TextView
                        android:id="@+id/current_feelslike"
                        style="@style/AppTheme.View.TextView"
                        android:gravity="center_horizontal"
                        android:text="10" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/tiny">

                    <TextView
                        style="@style/AppTheme.View.TextView"
                        android:text="@string/current_visibility_label" />

                    <TextView
                        android:id="@+id/current_visibility"
                        style="@style/AppTheme.View.TextView"
                        android:gravity="center_horizontal"
                        android:text="8" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/tiny">

                    <TextView
                        style="@style/AppTheme.View.TextView"
                        android:text="@string/current_windspeed_label" />

                    <TextView
                        android:id="@+id/current_windspeed"
                        style="@style/AppTheme.View.TextView"
                        android:gravity="center_horizontal"
                        android:text="11" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/tiny">

                    <TextView
                        style="@style/AppTheme.View.TextView"
                        android:text="@string/current_winddir_label" />

                    <TextView
                        android:id="@+id/current_winddir"
                        style="@style/AppTheme.View.TextView"
                        android:gravity="center_horizontal"
                        android:text="EAST" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/tiny">

                    <TextView
                        style="@style/AppTheme.View.TextView"
                        android:text="@string/current_humidity_label" />

                    <TextView
                        android:id="@+id/current_humidity"
                        style="@style/AppTheme.View.TextView"
                        android:gravity="center_horizontal"
                        android:text="77%" />
                </TableRow>
            </TableLayout>



        </LinearLayout>
    </ScrollView>
</RelativeLayout>